<resources>
  <string name="lang_ver">V2016-1-25</string>
  <string name="login_no_network_hint">Abnormal Network , please check the network connection</string>
  <string name="exit_software_hint">Are you sure to exit? No more alarm message after log out.</string>
  <string name="guide_start">start to experience</string>
  <string name="login_auto_set_password">Auto</string>
  <string name="login_gateway_server_hint">Gateway Server</string>
  <string name="login_gateway_name_not_null_hint">Gateway can not be empty</string>
  <string name="login_gateway_name_length_hint">The length of gateway is %s bits</string>
  <string name="login_login_success_hint">Connection is successful!</string>
  <string name="login_input_password_hint">Please input password</string>
  <string name="login_gateway_twodimensional_code_error_hint">This QR code can not be recognized as a gateway</string>
  <string name="guide_skip">Skip</string>
  <string name="login_rich_scan">Scan</string>
  <string name="login_gateway_name_hint">Gateway</string>
  <string name="login_gateway_password_hint">Password</string>
  <string name="login_gateway_search_hint">Search for gateway</string>
  <string name="login_remember_password_hint">Remember the password</string>
  <string name="login_gateway_searching_hint">Searching...</string>
  <string name="login_gateway_search_list">Gateway list</string>
  <string name="account_manager_modify_gateway_password_title">Password</string>
  <string name="login_login">Log in</string>
  <string name="login_gateway_login_failed_hint">Abnormal Nerwork or gateway is not online!</string>
  <string name="login_name_error">Gateway ID error, please check!</string>
  <string name="login_password_error">Password error, please enter again!</string>
  <string name="login_forget_password_hint">Forget password</string>
  <string name="login_not_search_gateway">Can\'t find the gateway!  Search Again</string>
  <string name="login_other_way_login">Other Ways to Login</string>
  <string name="login_show">Demonstration</string>
  <string name="login_start_default_password">Default Password as the last 6 digits of gateway ID</string>
  <string name="login_gwid_length">ID length must be 12 digits</string>
  <string name="login_show_version">Demo version</string>
  <string name="login_cancel_connection">Cancel connection</string>
  <string name="login_pushhand_networkflow">Enable Notification function in "Settings" - "Notification Center" and keep network in good condition</string>
  <string name="login_reinput">Re-enter</string>
  <string name="login_over_gwconnect_number">Gateway connection number exceed maximum</string>
  <string name="login_connect_fail_hint">Connection failed</string>
  <string name="login_connect_timeout_hint">Server connection is time out</string>
  <string name="login_db_error">Database file error, restart the Smart Home HD</string>
  <string name="login_first_lggin_tips">For security purpose, suggest modifying the gateway name and password in time</string>
  <string name="login_length_password_above_6">Password length must be 6 digits or above</string>
  <string name="login_first_log_change_name_success">Username modified successfully</string>
  <string name="login_not_login_gateway">Have not login gateway</string>
  <string name="login_no_user_name">Username</string>
  <string name="home_monitor_cloud_1_not_null">Can not be empty</string>
  <string name="home_monitor_wl_for_showview_error_server_exception">Server abnormal</string>
  <string name="home_monitor_server_exception_error">Call Failed</string>
  <string name="home_monitor_call_disconnected_hint">Disconnected</string>
  <string name="home_monitor_request_time_out_hint">Inquiry is time out</string>
  <string name="home_monitor_statue_not_can_not_control_hint">Cannot Execute</string>
  <string name="home_network_error_hint">Network abnormal, make sure the network is connected!</string>
  <string name="home_device_offline_red">[Offline]</string>
  <string name="nav_more">Explore</string>
  <string name="home_message_check_all_warn">Select All</string>
  <string name="home_return_message">Send</string>
  <string name="home_return_message_titel">Message</string>
  <string name="home_return_message_btn_send">Send</string>
  <string name="home_notification_content_download_progress">Downloaded</string>
  <string name="home_notification_pull_to_refresh_tap_label">click to refresh</string>
  <string name="home_social_no_history">No history record can be loaded</string>
  <string name="home_gateway_modify_prompt">For security purpose, recommend to modify the gateway account and password in time</string>
  <string name="home_message_load_alarm">Release to load more data immediately</string>
  <string name="home_message_loading_alarm">Loading</string>
  <string name="home_message_load_nodata_alarm">No data now</string>
  <string name="home_notification_ticker">There is a new message.</string>
  <string name="home_notification_timing_scene_exe_content_2">Timer scene： %s is being executed.</string>
  <string name="home_notification_timing_scene_exe_ticker">Timer scene execution notice.</string>
  <string name="home_sure_del_hint">Sure to delete?</string>
  <string name="home_notification_content">Program is running...</string>
  <string name="home_notification_title_error">Error occurred in program execution.</string>
  <string name="home_notification_content_error">Please email us the error information, thank you!</string>
  <string name="home_monitor_snapshot_success_hint">Photo has been saved to\n %s.</string>
  <string name="home_monitor_setting_monitor">Configure monitoring</string>
  <string name="home_monitor_showview_loading">Processing, please wait</string>
  <string name="home_monitor_showview_timedout_error">Inquiry is time out</string>
  <string name="home_monitor_showview_logining">Video Services registering, please wait...</string>
  <string name="home_monitor_login_gateway_first_tip">Bind failed due to password has been changed.\nPlease login gateway and add camera.</string>
  <string name="home_monitor_playing">Playing</string>
  <string name="home_monitor_uid_text">Please enter the unique identification code on the camera housing</string>
  <string name="home_monitor_already_bind_in_other_gateway">Bound with other account already</string>
  <string name="home_monitor_bind_camera">Bind with this Camera</string>
  <string name="home_monitor_result_unknow_id">Invalid ID</string>
  <string name="home_monitor_hold_to_talk">Press to talk</string>
  <string name="home_monitor_not_installed_icam_apk">WuLianICam not install,choose to download or not</string>
  <string name="home_social_user_name">User Name</string>
  <string name="home_open_icam_dialog_button_ok">Open WuLianICam</string>
  <string name="home_monitor_wrong_account">The camera you scanned can not be used as Wulian gateway .\n Use the correct gateway to login and add camera</string>
  <string name="monitor_cloud_video_camera_wla">Wulian Cloud Camera A</string>
  <string name="homet_delete_select_hin">Are you sure to delete the selected data?</string>
  <string name="home_loading_hint">Loading...</string>
  <string name="home_sure_del_all_hint"> Deleted data can not be recovered, want to delete?</string>
  <string name="home_message_check_warn">Check</string>
  <string name="home_connect_fail_hint">Connection failed, please try again!</string>
  <string name="home_monitor_result_connecting">Connecting···</string>
  <string name="home_gateway_modify">Modify Gateway</string>
  <string name="common_ok">OK</string>
  <string name="home_warning_message">Alarm</string>
  <string name="home_push_message">Chat</string>
  <string name="home_camera_monitor">Camera</string>
  <string name="home_gateway_status_prompt">Gateway connection status</string>
  <string name="home_gateway_status_prompt_detail">Gateway connection status shows how your software, network and gateway is connected</string>
  <string name="home_gateway_status_connected">Gateway connection is normal</string>
  <string name="home_gateway_status_connecting">Connection failure, please reconnect</string>
  <string name="home_gateway_status_disconnect">Gateway can not connect,please check the network</string>
  <string name="nav_home_title">Home</string>
  <string name="nav_scene_title">Scene</string>
  <string name="nav_device_title">Device</string>
  <string name="monitor_port">Port:</string>
  <string name="monitor_name">Name</string>
  <string name="monitor_ip_video_camera">IP Camera</string>
  <string name="monitor_hard_disk_video_camera">Hard Disk Recorder</string>
  <string name="monitor_cloud_two_video_camera">Cloud Ⅱ Camera</string>
  <string name="monitor_cloud_three_video_camera">Cloud Ⅲ Camera</string>
  <string name="scene_sun">Sun</string>
  <string name="scene_mon">Mon</string>
  <string name="scene_tue">Tue</string>
  <string name="scene_wed">Wed</string>
  <string name="scene_thu">Thu</string>
  <string name="scene_fri">Fri</string>
  <string name="scene_sat">Sat</string>
  <string name="cancel">Cancel</string>
  <string name="device_add_dev">Add device</string>
  <string name="more_no_device_can_be_added">No device can be added</string>
  <string name="abount_function_introduction_new_style">1.New style</string>
  <string name="abount_function_introduction_new_style_text">Simple, clear, refreshing and more humanized design, which brings you more comfortable experience.</string>
  <string name="about_function_introduction_login_interface">2.Login interface</string>
  <string name="about_function_introduction_login_interface_text">Add the function of search gateway in LAN. Multi-ways to login the gateway which brings more convenient and smart experience.</string>
  <string name="about_function_introduction_linkage_way">3.Linkage way</string>
  <string name="about_function_introduction_linkage_way_text">Contrary to previous, you can set the device as advanced linkage device and add the linkage task, it is more logical,simple and clear for the way of people\'s thinking</string>
  <string name="about_function_introduction_scene_setting">4.Scene setting</string>
  <string name="about_function_introduction_scene_setting_text">Long press the button can set the scene, integrating many functions into one button, and operation is more clear</string>
  <string name="about_function_introduction_area_manage">5.Area Management</string>
  <string name="about_function_introduction_area_manage_text">Add the new area management function which has better real-life experience and better service.</string>
  <string name="device_config_edit_dev_delete_remind_3">Note:</string>
  <string name="device_config_edit_dev_delete_item_1">1. After the deletion of Online Products, the device shall quit the network</string>
  <string name="device_config_edit_dev_delete_item_3">3. Please read the User Manual for the devices without SET button to quit the network</string>
  <string name="device_config_edit_dev_delete_item_2">2. Long press the SET Button for 10s to quit the network. If it succeeds, System Indicator flashes 4 times.</string>
  <string name="device_config_edit_dev_delete_remind_2">Methods for devices to quit the network:</string>
  <string name="device_config_edit_dev_delete_remind_1">Quitting the network means restoring to factory default setting. Please make networking settings before its next use</string>
  <string name="device_config_edit_dev_delete_item_4">After quitting the network, the device shall be marked “Offline”. Device “Offline” may be caused either by network quit, or by dead battery, unstable signal due to long distance between the device and the gateway, gateway restoration to factory default setting or device failure. After the deletion of Offline Products, the products shall disappear from the List of Devices, relevant settings may also be deleted, but it will not lead to network quit.</string>
  <string name="monitor_video_eagle">Smart Door Guardian</string>
</resources>