<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:background="@color/add_devices_background">
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content">
		<include layout="@layout/titlebar_add_device_scancode"/>
	</LinearLayout>
	<TextView
		android:id="@+id/tv_monitor_eagle_camera"
		android:layout_width="match_parent"
		android:layout_height="48dp"
		android:text="@string/monitor_video_eagle"
		android:paddingLeft="10dp"
		android:layout_margin="10dp"
		android:background="@color/white"
		android:textColor="@color/gray"
		android:gravity="center_vertical"
		android:textSize="@dimen/v2_small_size"
		/>
	<TextView
		android:id="@+id/tv_monitor_ip_video_camera"
		android:layout_width="match_parent"
		android:layout_height="48dp"
		android:text="@string/monitor_ip_video_camera"
		android:paddingLeft="10dp"
		android:layout_margin="10dp"
		android:background="@color/white"
		android:textColor="@color/gray"
		android:gravity="center_vertical"
		android:textSize="@dimen/v2_small_size"
		android:tag="1"
		/>
	<TextView
		android:id="@+id/tv_monitor_hard_disk_video_camera"
		android:layout_width="match_parent"
		android:layout_height="48dp"
		android:text="@string/monitor_hard_disk_video_camera"
		android:layout_margin="10dp"
		android:paddingLeft="10dp"
		android:background="@color/white"
		android:textColor="@color/gray"
		android:gravity="center_vertical"
		android:textSize="@dimen/v2_small_size"
		android:tag="2"
		/>
	<TextView
		android:id="@+id/tv_monitor_cloud_three_video_camera"
		android:layout_width="match_parent"
		android:layout_height="48dp"
		android:text="@string/monitor_cloud_three_video_camera"
		android:paddingLeft="10dp"
		android:layout_margin="10dp"
		android:background="@color/white"
		android:textColor="@color/gray"
		android:gravity="center_vertical"
		android:textSize="@dimen/v2_small_size"
		android:tag="3"
		/>

	<TextView
		android:id="@+id/tv_monitor_cloud_two_video_camera"
		android:layout_width="match_parent"
		android:layout_height="48dp"
		android:text="@string/monitor_cloud_two_video_camera"
		android:paddingLeft="10dp"
		android:layout_margin="10dp"
		android:background="@color/white"
		android:textColor="@color/gray"
		android:gravity="center_vertical"
		android:textSize="@dimen/v2_small_size"
		android:tag="4"
		/>

</LinearLayout>
